small update and added properties

--- a/es-server/src/main/resources/application.properties
+++ b/es-server/src/main/resources/application.properties
@@ -2,3 +2,10 @@ server.port=8080
 server.servlet.context-path=/
 logging.level.org.springframework = info
 server.error.include-message=always
+
+#h2 and jpa
+spring.jpa.show-sql= true
+logging.level.org.hibernate.type=trace
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.properties.hibarnate.format_sql=true
