h2 and jpa added and 4.1.1 added

--- a/es-server/src/main/resources/application.properties
+++ b/es-server/src/main/resources/application.properties
@@ -5,7 +5,8 @@ server.error.include-message=always
 
 #h2 and jpa
 spring.jpa.show-sql= true
-logging.level.org.hibernate.type=trace
 spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.jpa.properties.hibarnate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
