--- a/scooter/package.json
+++ b/scooter/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "angular-bootstrap-md": "^12.0.0",
     "bootstrap": "^5.1.1",
     "jquery": "^3.6.0",
